# VoxelVerse

./: .gitignore  AGENTS.md  Cargo.toml  MANIFEST.md  PLAN.md  README.md  skills-lock.json
apps/voxelverse/: Cargo.toml
apps/voxelverse-game/: Cargo.toml
apps/voxelverse-game/src/: main.rs  math.rs
apps/voxelverse-game/src/app/: content_bootstrap.rs  event_router.rs  feedback_router.rs  golden_scene.rs  inventory_events.rs  mod.rs  runtime_loop.rs
apps/voxelverse-game/src/content/: mod.rs
apps/voxelverse-game/src/diagnostics/: console.rs  mod.rs
apps/voxelverse-game/src/gameplay/: block_interaction.rs  block_selection.rs  hotbar.rs  inventory.rs  item_stack.rs  mod.rs  player.rs  player_controller.rs
apps/voxelverse-game/src/generation/: coord.rs  diagnostics.rs  features.rs  mod.rs  noise.rs  placement.rs  tree_shape.rs
apps/voxelverse-game/src/meshing/: cpu_mesh.rs  lod_mesher.rs  mod.rs  prop_baker.rs  voxel_mesher.rs
apps/voxelverse-game/src/physics/: mod.rs
apps/voxelverse-game/src/rendering/: mod.rs  perf_profile.rs  quality.rs  renderer.rs  shader.wgsl  types.rs
apps/voxelverse-game/src/streaming/: mesh_scheduler.rs
apps/voxelverse-game/src/ui/: inventory_screen.rs  mod.rs  theme.rs
apps/voxelverse-game/src/voxel/: mod.rs
apps/voxelverse-game/src/world/: mod.rs  planet.rs  planet_profile.rs  prop_layer.rs  runtime.rs  terrain_visual_palette.rs  vox_model.rs
apps/voxelverse-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/voxelverse-studio/src-tauri/capabilities/: default.json
apps/voxelverse-studio/src-tauri/src/: lib.rs  main.rs
apps/voxelverse/src/app/: action_result.rs  content_bootstrap.rs  cursor.rs  debug_input.rs  dev_state.rs  diagnostics_export.rs  event_router.rs  feedback_router.rs  frame_commands.rs  frame_driver.rs  game_app.rs  gameplay_actions.rs  golden_scene.rs  input_accumulator.rs  input_intent.rs  inventory_events.rs  mod.rs  player_frame_update.rs  player_input_router.rs  render_frame_update.rs  render_snapshot.rs  runtime_loop.rs  runtime_state.rs  ui_frame_update.rs  ui_input_router.rs  world_frame_update.rs
apps/voxelverse/src/ui/: mod.rs  view_model.rs
crates/vv-gameplay/: Cargo.toml
crates/vv-gameplay/src/: action_result.rs  block_actions.rs  block_interaction.rs  block_selection.rs  console.rs  controller.rs  crafting.rs  hotbar.rs  inventory.rs  item_stack.rs  lib.rs  mining.rs  planet_resize.rs  player.rs  player_controller.rs
crates/vv-meshing/: Cargo.toml
crates/vv-meshing/src/: ambient_occlusion.rs  config.rs  cpu_mesh.rs  debug_mesh.rs  greedy_mesher.rs  lib.rs  lod_input.rs  lod_mesher.rs  primitives.rs  prop_baker.rs  rounded_edges.rs  scheduler.rs  voxel_mesher.rs
crates/vv-meshing/src/voxel_mesher/: chunk_input.rs  face_culling.rs  face_emitter.rs  lighting.rs  material_packing.rs  mod.rs  prop_integration.rs
crates/vv-pack-compiler/: Cargo.toml
crates/vv-pack-compiler/src/: block_family.rs  block_mesh_class.rs  block_registry.rs  compiler.rs  compiler_tests.rs  content_index.rs  item_registry.rs  lib.rs  loot_registry.rs  materials.rs  object_compiler.rs  planet_registry.rs  procedural.rs  procedural_registry.rs  recipe_registry.rs  render_compiler.rs  render_compiler_tests.rs  render_feature_registry.rs  render_registry.rs  shader.rs  tag_registry.rs  texture_registry.rs
crates/vv-pack-doctor/: Cargo.toml
crates/vv-pack-doctor/src/: allowed.rs  index.rs  lib.rs  main.rs  parse.rs  report.rs  scan.rs
crates/vv-pack-doctor/src/checks/: blocks.rs  filesystem.rs  items.rs  loot.rs  mod.rs  naming.rs  parse.rs  paths.rs  progression.rs  recipes.rs  references.rs  render.rs  render_features.rs  source_contract.rs  stations.rs  tags.rs  textures.rs  voxel.rs  weather_cosmos.rs  worldgen.rs
crates/vv-pack-doctor/src/output/: html.rs  (+1 more)
crates/vv-pack-doctor/tests/: core_pack.rs  json_output.rs
crates/vv-render/: Cargo.toml
crates/vv-render/src/: atmosphere.rs  debug_render_mode.rs  lib.rs  lod_animation.rs  lod_streaming.rs  perf_profile.rs  quality.rs  render_budget.rs  render_graph.rs  render_pipeline_desc.rs  render_pipeline_factory.rs  render_pipeline_registry.rs  render_schedule.rs  renderer.rs  shader_contract.rs  shader_library.rs  snapshot.rs  texture_atlas.rs  types.rs  world_streaming.rs
crates/vv-render/tests/: render_snapshot_boundaries.rs
crates/vv-world/: Cargo.toml
crates/vv-world/src/: block_damage.rs  broken_props.rs  lib.rs  mesh_input_builder.rs  planet.rs  planet_edits.rs  planet_geometry.rs  planet_profile.rs  planet_queries.rs  planet_snapshot.rs  runtime.rs  spawn_resolver.rs  terrain_visual_palette.rs  vox_model.rs  world_time.rs
crates/vv-worldgen/: Cargo.toml
crates/vv-worldgen/src/: cave_decoration.rs  diagnostics.rs  features.rs  lib.rs  noise.rs  placement.rs  tree_shape.rs
src/vv-app/: Cargo.toml
src/vv-app/src/: diagnostics.rs  main.rs
src/vv-compiler/: Cargo.toml
src/vv-compiler/src/: compiler.rs  diagnostics.rs  identity.rs  lib.rs  reference_index.rs
src/vv-compiler/tests/: compile_voxelverse_core.rs
src/vv-gameplay/: Cargo.toml
src/vv-gameplay/src/: console.rs  crafting.rs  inventory.rs  lib.rs  mining.rs  pickup.rs  placement.rs  player.rs  player_state.rs  recipe_matching.rs
src/vv-input/: Cargo.toml
src/vv-input/src/: intent.rs  lib.rs
src/vv-mesh/: Cargo.toml
src/vv-mesh/src/: chunk.rs  debug_mesh.rs  lib.rs  lod.rs  overlay.rs  primitive_mesh.rs  primitives.rs  shape.rs  vertex.rs  visual.rs  voxel.rs
src/vv-render/: Cargo.toml
src/vv-render/src/: atmosphere.rs  block_atlas.rs  block_feedback.rs  celestial.rs  chunk_mesh.rs  frustum.rs  gameplay_ui.rs  lib.rs  lod_animator.rs  renderer.rs  shader.wgsl  shader_source.rs  sky_state.rs
src/vv-render/tests/: shader_validation.rs
src/vv-viewer/: Cargo.toml
src/vv-viewer/src/: args.rs  block_selector.rs  camera.rs  debug_mode.rs  main.rs  renderer.rs  scene.rs  viewer.wgsl  viewer_screenshot.rs  viewer_ui.rs
src/vv-world-gen/: Cargo.toml
src/vv-world-gen/src/: climate.rs  error.rs  hash.rs  lib.rs  math.rs  noise.rs  planet.rs  tags.rs  tests.rs  tree.rs
(+2032 files in other folders)
