[workspace]
members = [
    "apps/voxelverse",
    "crates/vv-content-schema",
    "crates/vv-diagnostics",
    "crates/vv-math",
    "crates/vv-pack-compiler",
    "crates/vv-pack-doctor",
    "crates/vv-audio",
    "crates/vv-pack-loader",
    "crates/vv-voxel",
    "crates/vv-worldgen",
    "crates/vv-world",
    "crates/vv-physics",
    "crates/vv-meshing",
    "crates/vv-render",
    "crates/vv-gameplay",
    "crates/vv-weather",
    "crates/vv-celestial",
]
exclude = ["apps/voxelverse-studio/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
dot_vox = "5"
glam = "0.25"
glyphon = "0.5"
png = "0.17"
pollster = "0.3"
rayon = "1.8"
ron = "0.8"
rodio = { version = "0.17", default-features = false, features = ["vorbis"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
wgpu = "0.19"
winit = "0.29"
