[package]
name = "voxelverse"
version.workspace = true
edition.workspace = true

[dependencies]
vv-diagnostics = { path = "../../crates/vv-diagnostics" }
vv-math = { path = "../../crates/vv-math" }
vv-pack-compiler = { path = "../../crates/vv-pack-compiler" }
vv-pack-loader = { path = "../../crates/vv-pack-loader" }
vv-voxel = { path = "../../crates/vv-voxel" }
vv-world = { path = "../../crates/vv-world" }
vv-worldgen = { path = "../../crates/vv-worldgen" }
vv-physics = { path = "../../crates/vv-physics" }
vv-meshing = { path = "../../crates/vv-meshing" }
vv-render = { path = "../../crates/vv-render" }
vv-gameplay = { path = "../../crates/vv-gameplay" }
vv-audio = { path = "../../crates/vv-audio" }

bytemuck.workspace = true
dot_vox.workspace = true
glam.workspace = true
glyphon.workspace = true
pollster.workspace = true
rayon.workspace = true
sysinfo.workspace = true
wgpu.workspace = true
winit.workspace = true
