[package]
name = "vv-gameplay"
version.workspace = true
edition.workspace = true

[dependencies]
vv-voxel = { path = "../vv-voxel" }
vv-math = { path = "../vv-math" }
vv-world = { path = "../vv-world" }
vv-physics = { path = "../vv-physics" }
vv-pack-compiler = { path = "../vv-pack-compiler" }

glam.workspace = true
