[package]
name = "vv-worldgen"
version.workspace = true
edition.workspace = true

[dependencies]
vv-voxel = { path = "../vv-voxel" }
vv-math = { path = "../vv-math" }
vv-pack-compiler = { path = "../vv-pack-compiler" }
vv-diagnostics = { path = "../vv-diagnostics" }

glam.workspace = true
rayon.workspace = true
