[package]
name = "vv-input"
version = "0.1.0"
edition = "2021"

[dependencies]
vv-core          = { path = "../vv-core" }
vv-planet        = { path = "../vv-planet" }
vv-world-runtime = { path = "../vv-world-runtime" }
vv-physics       = { path = "../vv-physics" }
vv-gameplay      = { path = "../vv-gameplay" }
vv-config        = { path = "../vv-config" }
vv-diagnostics   = { path = "../vv-diagnostics" }
glam   = "0.25"
winit  = "0.29"
