[package]
name = "vv-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
vv-voxel        = { path = "../vv-voxel" }
vv-core          = { path = "../vv-core" }
vv-planet        = { path = "../vv-planet" }
vv-world-runtime = { path = "../vv-world-runtime" }
vv-registry      = { path = "../vv-registry" }
glam    = "0.25"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
vv-config = { path = "../vv-config" }
vv-world-gen = { path = "../vv-world-gen" }
vv-compiler = { path = "../vv-compiler" }
