[package]
name = "vv-render"
version = "0.1.0"
edition = "2021"

[dependencies]
vv-core          = { path = "../vv-core" }
vv-mesh          = { path = "../vv-mesh" }
vv-planet        = { path = "../vv-planet" }
vv-world-runtime = { path = "../vv-world-runtime" }
vv-input         = { path = "../vv-input" }
vv-ui            = { path = "../vv-ui" }
vv-interface     = { path = "../vv-interface" }
vv-gameplay      = { path = "../vv-gameplay" }
vv-physics       = { path = "../vv-physics" }
vv-config        = { path = "../vv-config" }
vv-registry      = { path = "../vv-registry" }
vv-diagnostics   = { path = "../vv-diagnostics" }
glam     = "0.25"
wgpu     = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
winit    = "0.29"
glyphon  = "0.5"

[dev-dependencies]
naga = { version = "0.19.2", features = ["wgsl-in"] }
