[package]
name = "vv-world-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
vv-core   = { path = "../vv-core" }
vv-planet = { path = "../vv-planet" }
vv-config = { path = "../vv-config" }
vv-registry = { path = "../vv-registry" }
glam = "0.25"

[dev-dependencies]
vv-compiler = { path = "../vv-compiler" }
