[package]
name = "voxelverse-studio"
version = "0.1.0"
description = "Local-first VoxelVerse pack authoring tool."
authors = ["VoxelVerse"]
edition = "2021"

[lib]
name = "voxelverse_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
